--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <style>
-      *{
-        margin: 0;
-        padding: 0;
-      }
-      html,body, #app{
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-      }
-    </style>
   </head>
   <body>
     <noscript>
@@ -24,5 +13,12 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <style>
+      html,body{
+        height: 100%;
+        overflow: hidden;
+      }
+    </style>
   </body>
 </html>
