--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- 配置信息文件 -->
-    <script src="<%= BASE_URL %>config.js"></script>
+    <!-- <script src="<%= BASE_URL %>config.js"></script> -->
   </head>
   <body>
     <noscript>
